--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "ltuc-arena-backend",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -25,5 +25,8 @@
     "express": "^4.18.2",
     "nodemon": "^2.0.22",
     "pg": "^8.10.0"
+  },
+  "engines": {
+    "node": "14.x"
   }
 }
